--- a/index.html
+++ b/index.html
@@ -19,20 +19,18 @@
             </header>
             <main>
                 <div class="main-text-box">
-                    <div id="welcome-message" class="main-div selected">
+                    <div class="main-div welcome-message selected">
                         <span>There will be my info here and project details</span>
                     </div>
-                    <div id="project-1-div" class="project-1-info main-div unselected"><p>Project 1 Info</p></div>
-                    <div id="project-2-div" class="main-div unselected"><p>Project 2 Info</p></div>
-                    <div id="project-3-div" class="main-div unselected"><p>Project 3 Info</p></div>
+                    <div class="main-div project-1-info unselected"><p>Project 1 Info</p></div>
+                    <div class="main-div project-2-info  unselected"><p>Project 2 Info</p></div>
+                    <div class="main-div project-3-info  unselected"><p>Project 3 Info</p></div>
                 </div>
                 <div class="main-spacer"></div>
                 <div id="clicked" class="main-projects">
-                    <ul>
-                        <li title="project" id="project-1-link">Project 1</li>
-                        <li title="project" class="project-2-link">Project 2</li>
-                        <li title="project" class="project-3-link">Project 3</li>
-                    </ul>
+                    <div><h2 class="project-1-link">Project 1</h2></div>
+                    <div><h2 class="project-2-link">Project 2</h2></div>
+                    <div><h2 class="project-3-link">Project 3</h2></div>      
                 </div>
             </main>
             <footer>J Tidwell 2023.</footer>
