changed some styles

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     </div>
                             </div>
                             <div class="welcome-intro">
-                                <p>There will be my info here and project details</p>
+                                <p>My name is Josh Tidwell.</p>
                             </div>
                         </div>
                         <div class="main-div project-1-info unselected">
