added svg lines

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                     <div class="main-text-box">
                         <div class="welcome-div main-div selected">
                             <div class="welcome-header">
+                                <div style = "position:absolute; top: 5vw; left: 2vw;">
+                                    <svg width="200" height="100">
+                                      <line x1="3" y1="5" x2="100" y2="5" stroke="#4CBB17" stroke-width="4"/>
+                                      <line x1="5" y1="5" x2="5" y2="75" stroke="#4CBB17" stroke-width="4"/>
+                                    </svg>
+                                    </div>
                                 <div id="myobj">
                                     <!--SVG image used font from Charles Daoud's "Dense" http://www.behance.net/gallery/Dense-typeface/10231891 -->
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -51,6 +57,7 @@
                             <div class="welcome-intro">
                                 <p>My name is Josh Tidwell.</p>
                             </div>
+                            
                         </div>
                         <div class="main-div project-1-info unselected">
                             <div class="project-info-div">
@@ -72,6 +79,12 @@
                     </div>
                     <div class="main-spacer"></div>
                     <div class="main-projects">
+                        <div style = "position:absolute; top: 35vw; right: 2vw;">
+                            <svg width="200" height="100">
+                                <line x1="3" y1="5" x2="100" y2="5" stroke="#4CBB17" stroke-width="4"/>
+                                <line x1="5" y1="5" x2="5" y2="-150" stroke="#4CBB17" stroke-width="4"/>
+                            </svg>
+                            </div>
                         <div class="main-projects-header">
                             <h2>Projects</h2>
                         </div>
