added style for borders and js function update to move sidebar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </div>
                             <div class="page-divider">
                                 <svg width="200" height="10">
-                                    <line x1="3" y1="5" x2="200" y2="5" stroke="#808080" stroke-width="4"/>
+                                    <line x1="3" y1="5" x2="200" y2="5" stroke="#808080" stroke-width="2"/>
                                 </svg>
                             </div>
                             <div class="welcome-header">
@@ -49,9 +49,9 @@
                                   <line x1="5" y1="5" x2="5" y2="75" stroke="#4CBB17" stroke-width="4"/>
                                 </svg>
                                 </div>
-                                <div class="page-divider-1">
+                                <div class="page-divider">
                                     <svg width="200" height="10">
-                                        <line x1="3" y1="5" x2="200" y2="5" stroke="#808080" stroke-width="4"/>
+                                        <line x1="3" y1="5" x2="200" y2="5" stroke="#808080" stroke-width="2"/>
                                     </svg>
                                 </div>
                             <div class="project-info-div">
@@ -75,9 +75,9 @@
                                   <line x1="5" y1="5" x2="5" y2="75" stroke="#4CBB17" stroke-width="4"/>
                                 </svg>
                             </div>
-                            <div class="page-divider-2">
+                            <div class="page-divider">
                                 <svg width="200" height="10">
-                                    <line x1="3" y1="5" x2="200" y2="5" stroke="#808080" stroke-width="4"/>
+                                    <line x1="3" y1="5" x2="200" y2="5" stroke="#808080" stroke-width="2"/>
                                 </svg>
                             </div>
                             <div class="project-info-div">
@@ -99,9 +99,9 @@
                                   <line x1="5" y1="5" x2="5" y2="75" stroke="#4CBB17" stroke-width="4"/>
                                 </svg>
                             </div>
-                            <div class="page-divider-3">
+                            <div class="page-divider">
                                 <svg width="200" height="10">
-                                    <line x1="3" y1="5" x2="200" y2="5" stroke="#808080" stroke-width="4"/>
+                                    <line x1="3" y1="5" x2="200" y2="5" stroke="#808080" stroke-width="2"/>
                                 </svg>
                             </div>
                             <div class="project-info-div">
@@ -119,16 +119,16 @@
                     </div>
                     <div class="main-spacer"></div>
                     <div class="main-projects">
-                            <div class="project-list-border">
+                            <div class="pl-border-select project-list-border">
                                 <svg width="20" height="400">
                                     <line x1="5" y1="0" x2="5" y2="100" stroke="#808080" stroke-width="4"/>
                                 </svg>
                                 </div>
                         <div class="main-projects-header">
                             <h2>Projects</h2>
-                            <div>
+                            <div class="projects-header-divider">
                                 <svg width="400" height="10">
-                                    <line x1="0" y1="5" x2="150" y2="5" stroke="#4CBB17" stroke-width="4"/>
+                                    <line x1="0" y1="5" x2="150" y2="5" stroke="#4CBB17" stroke-width="2"/>
                                 </svg>
                             </div>
                         </div>
