added info for projects and intro, changed styles a bit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
                                 <h1>Welcome</h1>
                             </div>
                             <div class="welcome-intro">
-                                <p>My name is Josh Tidwell.</p>
+                                <p>My name is Josh Tidwell, I'm a Developer with experience in both front-end
+                                    and back-end app development. I have always been a builder at heart and I 
+                                    really enjoy the process of designing, planning and executing projects. I
+                                    also enjoy building outside of technology and have designed and created many 
+                                    different wood crafts. Please take a minute to view my projects and let me know
+                                    what you think!
+                                </p>
                             </div>
                             
                         </div>
@@ -59,11 +65,22 @@
                                     <h3>Green Notez</h3>
                                 </div>
                                 <div class="project-info">
-                                    <p>I created Green Notez to help keep notes of water changes, daily checks
-                                        and problems.</p>
+                                    <p>I created Green Notez to help keep track of water changes, daily checks
+                                       and problems for hydroponic gardening. Hydroponic growers are encouraged to
+                                       keep a close eye on their gardens and this app can help.
+                                       This project was created using React
+                                       for the UI and Supabase for the database storage and user authentication.
+                                       Users can created .jpg note cards that display their entered data to
+                                       share online to ask for help, show off or use as a reference.
+                                       </p>
                                 </div>
                                 <div class="project-links">
-
+                                    <div class="live-link">
+                                        <a href="#">Live</a>
+                                    </div>
+                                    <div class="github-link">
+                                        <a href="#">Github</a>
+                                    </div>
                                 </div>
                             </div>
                             
@@ -85,10 +102,21 @@
                                     <h3>Green Capz</h3>
                                 </div>
                                 <div class="project-info">
-                                    <p>I created Green Capz to help monitor the water in my indoor garden.</p>
+                                    <p>I created Green Capz to help monitor the reservoir data in a hydroponic garden.
+                                        This app reads data from a MongoDB database and displays a users current
+                                        temperature, humidity and water PPM. User's data from the past week is also
+                                        displayed on line charts. I created this project using a
+                                        Node/Express/MongoDB/Pug stack. I used express-sessions for user sessions
+                                        and bcrypt to store user passwords and authenticate. 
+                                    </p>
                                 </div>
                                 <div class="project-links">
-
+                                    <div class="live-link">
+                                        <a href="#">Live</a>
+                                    </div>
+                                    <div class="github-link">
+                                        <a href="#">Github</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -109,10 +137,21 @@
                                     <h3>Green Capz Sensor Controller</h3>
                                 </div>
                                 <div class="project-info">
-                                    <p>I created the sensor controller for the Green Capz app using a Raspberry Pi.</p>
+                                    <p>I created the sensor controller for the Green Capz app using a Raspberry Pi
+                                       connected to an Arduino board. The Arduino board reads the analog sensors,
+                                       converts to digital signal and is sent to the Raspberry Pi. The Raspberry Pi
+                                       is running an Express/Node/MongoDB/Pug stack which saves user data to be accessed
+                                       from Green Capz. The box containing the Raspberry Pi and Arduino boards has a display\
+                                       mounted to show current readings. The Arduino board needed minimal C code writen.
+                                    </p>
                                 </div>
                                 <div class="project-links">
-
+                                    <div class="live-link">
+                                        <a href="#">Live</a>
+                                    </div>
+                                    <div class="github-link">
+                                        <a href="#">Github</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
