--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                                        connected to an Arduino board. The Arduino board reads the analog sensors,
                                        converts to digital signal and is sent to the Raspberry Pi. The Raspberry Pi
                                        is running an Express/Node/MongoDB/Pug stack which saves user data to be accessed
-                                       from Green Capz. The box containing the Raspberry Pi and Arduino boards has a display\
-                                       mounted to show current readings. The Arduino board needed minimal C code writen.
+                                       from Green Capz. The box containing the Raspberry Pi and Arduino boards has a 
+                                       mounted display to show current readings. The Arduino board needed minimal C code writen.
                                     </p>
                                 </div>
                                 <div class="project-links">
