--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <body>
         <div class="main-container">
             <header class="main-header">
-                <img src="./images/gmail.png" alt="">
-                <img src="./images/github.svg" alt="">
+                <a href="mailto:josh.tidwell213@gmail.com"><img src="./images/gmail.png" alt=""></a>
+                <a href="https://github.com/tid213"><img src="./images/github.svg" alt=""></a>
             </header>
             <main>
                 <div class="main-page">
@@ -79,7 +79,7 @@
                                         <a href="#">Live</a>
                                     </div>
                                     <div class="github-link">
-                                        <a href="#">Github</a>
+                                        <a href="https://github.com/tid213/green-notez">Github</a>
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
                                         <a href="#">Live</a>
                                     </div>
                                     <div class="github-link">
-                                        <a href="#">Github</a>
+                                        <a href="https://github.com/tid213/greencapz-web-app">Github</a>
                                     </div>
                                 </div>
                             </div>
@@ -146,11 +146,8 @@
                                     </p>
                                 </div>
                                 <div class="project-links">
-                                    <div class="live-link">
-                                        <a href="#">Live</a>
-                                    </div>
                                     <div class="github-link">
-                                        <a href="#">Github</a>
+                                        <a href="https://github.com/tid213/gc-sensor-controller">Github</a>
                                     </div>
                                 </div>
                             </div>
