--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 </div>
                                 <div class="project-links">
                                     <div class="live-link">
-                                        <a href="#">Live</a>
+                                        <a href="https://greennotez.herokuapp.com/">Live</a>
                                     </div>
                                     <div class="github-link">
                                         <a href="https://github.com/tid213/green-notez">Github</a>
@@ -112,7 +112,7 @@
                                 </div>
                                 <div class="project-links">
                                     <div class="live-link">
-                                        <a href="#">Live</a>
+                                        <a href="https://greencapz.herokuapp.com/">Live</a>
                                     </div>
                                     <div class="github-link">
                                         <a href="https://github.com/tid213/greencapz-web-app">Github</a>
