changed desktop views

--- a/index.html
+++ b/index.html
@@ -163,8 +163,13 @@
                         <div class="main-projects-header">
                             <h2>Projects</h2>
                             <div class="projects-header-divider">
-                                <svg width="400" height="10">
+                                <svg width="220" height="10">
                                     <line x1="0" y1="5" x2="150" y2="5" stroke="#4CBB17" stroke-width="2"/>
+                                </svg>
+                            </div>
+                            <div class="projects-header-divider-wide">
+                                <svg width="220" height="10">
+                                    <line x1="0" y1="5" x2="150" y2="5" stroke="#808080" stroke-width="2"/>
                                 </svg>
                             </div>
                         </div>
@@ -174,9 +179,9 @@
                             <div><p class="project-3-link">GC Sensor Controller</p></div>
                         </div> 
                         <div class="project-border">
-                            <svg width="200" height="100">
-                                <line x1="3" y1="5" x2="100" y2="5" stroke="#4CBB17" stroke-width="4"/>
-                                <line x1="5" y1="5" x2="5" y2="75" stroke="#4CBB17" stroke-width="4"/>
+                            <svg width="100" height="75">
+                                <line x1="4" y1="5" x2="100" y2="5" stroke="#4CBB17" stroke-width="2"/>
+                                <line x1="5" y1="5" x2="5" y2="75" stroke="#4CBB17" stroke-width="2"/>
                             </svg>
                         </div>     
                     </div>
