changed some styles and removed border

--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
                                 </svg>
                                 </div>
                         <div class="main-projects-header">
-                            <h2>Projects</h2>
+                            <div class="projects-line projects-line-on">
+                                <h2>Projects</h2>
+                            </div>
+                            
                             <div class="projects-header-divider">
                                 <svg width="220" height="10">
                                     <line x1="0" y1="5" x2="150" y2="5" stroke="#4CBB17" stroke-width="2"/>
