changed link to green notez

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/heroku/heroku-plain.svg" />
                                 </div>
                                 <div class="project-links">
-                                    <a href="https://greennotez.herokuapp.com/"><div class="live-link">Live</div></a>                                    
+                                    <a href="http://www.greennotez.com/"><div class="live-link">Live</div></a>                                    
                                     <a href="https://github.com/tid213/green-notez"><div class="github-link">Github</div></a>
                                 </div>
                                 <div class="main-bottom-border">
